--- a/AndroidStudioProjects/metroApp/app/src/main/res/layout/activity_main.xml
+++ b/AndroidStudioProjects/metroApp/app/src/main/res/layout/activity_main.xml
@@ -3,9 +3,57 @@
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
+    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
+    android:background="#ffc1c0ff">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Salir ahora"
+        android:id="@+id/Bahora"
+        android:width="250dp"
+        android:height="80dp"
+        android:layout_marginTop="80dp"
+        android:layout_alignLeft="@+id/Bplanificar"
+        android:layout_alignStart="@+id/Bplanificar"
+        android:background="#ffff6510"
+        android:textSize="20dp" />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Planificar viaje"
+        android:id="@+id/Bplanificar"
+        android:layout_below="@+id/Bahora"
+        android:layout_marginTop="50dp"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        android:width="250dp"
+        android:height="80dp"
+        android:background="#ffff6510"
+        android:textSize="20dp" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Mapa"
+        android:id="@+id/Bmapa"
+        android:layout_below="@+id/Bplanificar"
+        android:layout_marginTop="50dp"
+        android:layout_centerHorizontal="true"
+        android:width="250dp"
+        android:height="80dp"
+        android:background="#ffff6510"
+        android:textSize="20dp" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Salir"
+        android:id="@+id/Bsalir"
+        android:layout_below="@+id/Bmapa"
+        android:layout_alignRight="@+id/Bmapa"
+        android:layout_alignEnd="@+id/Bmapa"
+        android:layout_marginTop="30dp"
+        android:background="#ffff1719"/>
 </RelativeLayout>
